[gd_scene load_steps=14 format=3 uid="uid://bnf8a5slvyf7m"]

[ext_resource type="Script" path="res://Scripts/Characters/square_power.gd" id="1_p3v8f"]
[ext_resource type="Texture2D" uid="uid://31n85t3xu4vq" path="res://Assets/Sprites/G_blue/blue_body_square.png" id="1_tb8kt"]
[ext_resource type="Texture2D" uid="uid://bgrg4wlxekxwc" path="res://Assets/Sprites/G_green/green_body_square.png" id="2_77mya"]
[ext_resource type="Texture2D" uid="uid://mlobf311tere" path="res://Assets/Sprites/G_pink/pink_body_square.png" id="3_a6luw"]
[ext_resource type="Texture2D" uid="uid://h7af4xjlhul0" path="res://Assets/Sprites/G_purple/purple_body_square.png" id="4_iukm5"]
[ext_resource type="Texture2D" uid="uid://b0nfi24apobrv" path="res://Assets/Sprites/G_red/red_body_square.png" id="5_kltju"]
[ext_resource type="Texture2D" uid="uid://lie0ore3e0v3" path="res://Assets/Sprites/G_yellow/yellow_body_square.png" id="6_4wcc4"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_fc7rt"]
bounce = 0.2

[sub_resource type="SpriteFrames" id="SpriteFrames_jf0uh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_tb8kt")
}],
"loop": true,
"name": &"Blue",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_77mya")
}],
"loop": true,
"name": &"Green",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_a6luw")
}],
"loop": true,
"name": &"Pink",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_iukm5")
}],
"loop": true,
"name": &"Purple",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_kltju")
}],
"loop": true,
"name": &"Red",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_4wcc4")
}],
"loop": true,
"name": &"Yellow",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ej11r"]

[sub_resource type="Animation" id="Animation_5ajsb"]
resource_name = "Bye"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.001, 0.001)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_vcfkq"]
resource_name = "RESET"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Body:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u3ct1"]
_data = {
"Bye": SubResource("Animation_5ajsb"),
"RESET": SubResource("Animation_vcfkq")
}

[node name="Square_power" type="RigidBody2D"]
collision_layer = 2
collision_mask = 7
input_pickable = true
mass = 2.0
physics_material_override = SubResource("PhysicsMaterial_fc7rt")
script = ExtResource("1_p3v8f")

[node name="Body" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jf0uh")
animation = &"Blue"

[node name="Shape" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(75, -75, 79, -70, 80, -65, 80, 64, 78, 71, 75, 75, 71, 78, 65, 80, -65, 80, -71, 78, -75, 75, -78, 70, -80, 64, -80, -66, -77.9963, -71.4045, -75, -75, -72, -78, -67, -80, 64, -80, 69, -79)

[node name="Internal_security" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Internal_security"]
scale = Vector2(3, 3)
shape = SubResource("RectangleShape2D_ej11r")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u3ct1")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="body_entered" from="Internal_security" to="." method="_on_internal_security_body_entered"]
